fixed spacing below contact form

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -433,7 +433,7 @@ a {
 }
 // form styling
 .form-layout-container {
-    margin-top: 5vh;
+    margin: 3em 0 10em 0;
 }
 .form-layout {
     width: 100%;
